syntax = "proto3";

package todo.v1;

option go_package = "github.com/saurabhj/lld-interview/backend/gen/proto/todo/v1;todov1";

// Todo represents a task item
message Todo {
  int64 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  string created_at = 5;
  string updated_at = 6;
}

// Request messages
message CreateTodoRequest {
  string title = 1;
  string description = 2;
}

message CreateTodoResponse {
  Todo todo = 1;
}

message GetTodoRequest {
  int64 id = 1;
}

message GetTodoResponse {
  Todo todo = 1;
}

message ListTodosRequest {
  int32 page_size = 1;
  int32 page = 2;
}

message ListTodosResponse {
  repeated Todo todos = 1;
  int32 total = 2;
}

message UpdateTodoRequest {
  int64 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}

message UpdateTodoResponse {
  Todo todo = 1;
}

message DeleteTodoRequest {
  int64 id = 1;
}

message DeleteTodoResponse {
  bool success = 1;
}

// TodoService provides CRUD operations for todos
service TodoService {
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse) {}
  rpc GetTodo(GetTodoRequest) returns (GetTodoResponse) {}
  rpc ListTodos(ListTodosRequest) returns (ListTodosResponse) {}
  rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse) {}
  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse) {}
}
